handle arabic invalidate email message. Change default 'too short' message

--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -2468,5 +2468,11 @@
       "زيت أفضل بائع",
       "Oil Best Seller"
     ]
+  },
+  "validation": {
+    "email": [
+      "عنوان البريد الإلكتروني غير صالح",
+      "Invalid email address"
+    ]
   }
 }
