fix sideBar arrow, productDetail data coming from the server, and renamed params

--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -1753,6 +1753,10 @@
     "recentViewed": [
       "منتجاتك التي تم عرضها مؤخرًا",
       "Your recently viewed products"
+    ],
+    "number": [
+      "رقم المنتج: #",
+      "Product Number: #"
     ]
   },
   "compareProduct": {
