--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -1,13 +1,5 @@
 {
   "general": {
-    "searchButton": [
-      "بحث",
-      "find"
-    ],
-    "search": [
-      "بحث",
-      "Search"
-    ],
     "send": [
       "إرسال",
       "Send"
@@ -46,6 +38,10 @@
       "send": [
         "إرسال",
         "Send"
+      ],
+      "search": [
+        "بحث",
+        "Search"
       ],
       "checkout": [
         "الدفع",
@@ -143,17 +139,61 @@
     "viewDetails": [
       "عرض التفاصيل",
       "View Details"
+    ],
+    "select": [
+      "اختار",
+      "Select"
     ]
   },
-  "tyresPage": {
-    "selectTyreSize": [
-      "اختر المقاس",
-      "Select Size"
+  "tires": {
+    "title": [
+      "الإطارات",
+      "Tires"
+    ],
+    "selectTiresSize": {
+      "header": [
+        "اختر",
+        "Select"
+      ],
+      "subHeader1": [
+        "الإطارات",
+        "Tires"
+      ],
+      "subHeader2": [
+        "حجم",
+        "size"
+      ],
+      "p": [
+        "تأكد من أنه يناسب! ابحث حسب الحجم",
+        "Make Sure It Fits! Search by size"
+      ]
+    },
+    "bestseller": [
+      "الإطارات الأكثر مبيعا",
+      "Tiers Bestseller"
+    ],
+    "popularBrands": [
+      "العلامات التجارية الأكثر طلبا",
+      "Popular Tires Brands"
     ],
     "popularSizes": [
       "المقاسات الأكثر طلبا",
-      "Popular Tyre Sizes"
-    ]
+      "Popular Tires Sizes"
+    ],
+    "placeholders": {
+      "width": [
+        "عرض",
+        "Width"
+      ],
+      "height": [
+        "ارتفاع",
+        "Height"
+      ],
+      "diameter": [
+        "القطر",
+        "Diameter"
+      ]
+    }
   },
   "motorOilPage": {
     "selectViscosity": [
