--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -143,6 +143,18 @@
     "viewDetails": [
       "عرض التفاصيل",
       "View Details"
+    ],
+    "clearAll": [
+      "حذف الكل",
+      "Clear All"
+    ],
+    "done": [
+      "تم",
+      "Done"
+    ],
+    "filter": [
+      "فلتر",
+      "filter"
     ]
   },
   "tyresPage": {
