add startNow button

--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -531,6 +531,10 @@
     "startNow": [
       "ابدأ الآن",
       "Start now"
+    ],
+    "startHere": [
+      "أبدأ هنا",
+      "Start here"
     ]
   },
   "navBar": {
