fix iphone sidebar click issue. Fix text showing for cat in Arabic

--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -256,7 +256,7 @@
     ],
     "oil": [
       "الزيوت و السوائل",
-      "Oils and Fluids"
+      "Oils & Fluids"
     ],
     "motorOil": [
       "زيوت المحرك",
