remove sidebar (mobile) in the setting page

--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -593,8 +593,8 @@
           "My orders"
         ],
         "address": [
-          "عناويني",
-          "My addresses"
+          "عناوين",
+          "Addresses"
         ],
         "setting": [
           "إعدادات",
