--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -2583,7 +2583,7 @@
       "q.parts@2019"
     ]
   },
-  "no-result": {
+  "noResult": {
     "no":[
       "لا",
       "No"
@@ -2595,6 +2595,18 @@
     "sorry":[
       ":( نعتذر,لا يوجد نتائج",
       "Sorry, No Result Found :("
+    ],
+    "custom-order":[
+      "إصدار أمر مخصص",
+      "Make a Custom Order"
+    ],
+    "shopBy":[
+      "تسوق حسب",
+      "SHOP BY"
+    ],
+    "category":[
+      "القسم",
+      "CATEGORY"
     ]
   }
 
