fix reload the content every time we change the url. Showing the result title

--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -397,6 +397,14 @@
     "oneOfTheIncubatedProjects": [
       "واحد من المشاريع المحتضنة",
       "One of the Incubated Projects"
+    ],
+    "spareParts": [
+      "قطع غيار",
+      "Spare Parts"
+    ],
+    "batteries": [
+      "بطاريات",
+      "Batteries"
     ]
   },
   "quotationOrder": {
