--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -551,7 +551,7 @@
   },
   "navBar": {
     "vehiclePart": [
-      "جزء السيارة",
+      "قطع غيار السيارات",
       "Vehicle part"
     ],
     "motorOil": [
@@ -623,7 +623,7 @@
       }
     },
     "search": [
-      "البحث عن طريق رقم الجزء ، اسم المنتج",
+      "البحث عن طريق رقم القطعة ، اسم المنتج",
       "Search by Part Number,  Product Name"
     ],
     "home": [
@@ -2177,7 +2177,7 @@
       "Pending"
     ],
     "replied": [
-      "ردها",
+      "تم الرد عليها",
       "Replied"
     ],
     "requestNo": [
