--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -2601,19 +2601,19 @@
       "Results"
     ],
     "sorry":[
-      ":( نعتذر,لا يوجد نتائج",
-      "Sorry, No Result Found :("
+      ":( نعتذر,لا توجد نتائج",
+      "Sorry, No Results Found :("
     ],
     "custom-order":[
-      "إصدار أمر مخصص",
-      "Make a Custom Order"
+      "اطلب تسعيرة للقطع الي تريدها من هنا",
+      "Make a quotation order for your parts here"
     ],
     "shopBy":[
       "تسوق حسب",
       "SHOP BY"
     ],
     "category":[
-      "القسم",
+      "الصنف",
       "CATEGORY"
     ]
   }
