Qoutation, Sign up and sign in updates

--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -2425,12 +2425,12 @@
       "Password Recovery"
     ],
     "textOne": [
-      "يمكنك استرداد معلومات حسابك المفقودة باستخدام النموذج أدناه. تفضل",
-      "You can recover your lost account information using the form below. Please enter"
+      "يمكنك استرداد معلومات حسابك المفقودة باستخدام النموذج أدناه. ",
+      "You can recover your lost account information using the form below."
     ],
     "textTwo": [
-      "عنوان بريد إلكتروني صالح ، سيتم إرسال معلومات حسابك إليك بعد قليل",
-      "valid e-mail address, your account information will be mailed to you shortly"
+      "إدخل عنوان بريد إلكتروني صالح ، سيتم إرسال معلومات حسابك إليك بعد قليل",
+      "Please enter valid e-mail address, your account information will be mailed to you shortly"
     ],
     "labels": {
       "email": [
