--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -1,5 +1,9 @@
 {
   "general": {
+    "enter": [
+      "أدخل",
+      "Enter"
+    ],
     "send": [
       "إرسال",
       "Send"
@@ -82,6 +86,14 @@
       "go": [
         "اعرض النتيجة",
         "Apply Filter"
+      ],
+      "show": [
+        "عرض",
+        "Show"
+      ],
+      "hide": [
+        "إخفاء",
+        "Hide"
       ]
     },
     "arabic": [
@@ -159,6 +171,22 @@
     "select": [
       "اختار",
       "Select"
+    ],
+    "country": [
+      "البلد",
+      "Country"
+    ],
+    "region": [
+      "منطقة",
+      "Region"
+    ],
+    "city": [
+      "مدينة",
+      "City"
+    ],
+    "ksa": [
+      "السعودية",
+      "KSA"
     ]
   },
   "tires": {
@@ -458,12 +486,42 @@
       "title": [
         "معلومات السيارة",
         "Vehicle Information"
+      ],
+      "make": [
+        "اختر السيارة",
+        "Select a Vehicle Make"
+      ],
+      "model": [
+        "اختر موديل",
+        "Select a Vehicle Model"
+      ],
+      "year": [
+        "اختر سنة",
+        "Select a year"
       ]
     },
     "shipping": {
       "title": [
         "معلومات الشحن",
         "Shipping Information"
+      ],
+      "region": [
+        "اختر المنطقة",
+        "Select a region"
+      ],
+      "city": [
+        "اختر المدينة",
+        "Select a city"
+      ]
+    },
+    "garage": {
+      "title": [
+        "اختر السيارة",
+        "Select a vehicle"
+      ],
+      "subTitle": [
+        "عرض وإدارة والعثور على قطع غيار للسيارات في المرآب الخاص بك",
+        "View, manage and find parts for the vehicles in your garage"
       ]
     },
     "parts": [
@@ -775,6 +833,10 @@
         "اختر المدينة",
         "Select a city"
       ],
+      "region": [
+        "اختر المنطقة",
+        "Select a region"
+      ],
       "password": [
         "كلمة المرور",
         "Password"
@@ -891,7 +953,7 @@
       ],
       "make": [
         "اختر السيارة",
-        "Choose a car"
+        "Make"
       ],
       "model": [
         "موديل",
@@ -2215,7 +2277,7 @@
       ],
       "select": [
         "اختر السيارة",
-        "Select vehicle"
+        "Select a vehicle"
       ]
     },
     "partInfo": {
