edited translation page start here

--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -603,7 +603,7 @@
       "Start now"
     ],
     "startHere": [
-      "أبدأ طلب تسعيرة",
+      "ابدأ طلب تسعيرة",
       "Start Qutaation Order"
     ]
   },
