the next,prev and page Number

--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -187,6 +187,14 @@
     "ksa": [
       "السعودية",
       "KSA"
+    ],
+    "of": [
+      "من",
+      "of"
+    ],
+    "page": [
+      "صفحة",
+      "Page"
     ]
   },
   "tires": {
