--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -612,7 +612,7 @@
     ],
     "startHere": [
       "ابدأ طلب تسعيرة",
-      "Start Qutaation Order"
+      "Start Quotation Order"
     ]
   },
   "navBar": {
