edited address in translation

--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -1006,7 +1006,7 @@
         "Select from google map"
       ],
       "title": [
-        "عنوان",
+        "اسم العنوان",
         "Title"
       ],
       "region": [
@@ -1018,12 +1018,12 @@
         "City"
       ],
       "line1": [
-        "سطر العنوان ١",
+        "العنوان",
         "Address line 1"
       ],
       "line2": [
-        "سطر العنوان ٢",
-        "Address line 2"
+        "الحي أو أقرب معلم",
+        "District / Nearest Landmark"
       ],
       "zipCode": [
         "الرمز البريدي",
@@ -1744,12 +1744,12 @@
         "Delete"
       ],
       "addressLine1": [
-        "سطر العنوان ١",
-        "Address (Line 1)"
+        "العنوان",
+        "Address"
       ],
       "addressLine2": [
-        "سطر العنوان ٢",
-        "Address (Line 2)"
+        "الحي أو أقرب معلم",
+        "District / Nearest Landmark"
       ],
       "zipCode": [
         "الرمز البريدي",
