--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -188,10 +188,6 @@
       "السعودية",
       "KSA"
     ],
-    "of": [
-      "من",
-      "of"
-    ],
     "page": [
       "صفحة",
       "Page"
@@ -199,6 +195,10 @@
     "all": [
       "الكل",
       "All"
+    ],
+    "vin": [
+      "رقم الهيكل",
+      "Vin Number"
     ]
   },
   "tires": {
