translate the error

--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -199,6 +199,10 @@
     "all": [
       "الكل",
       "All"
+    ],
+    "error": [
+      "فشل الاجراء",
+      "transaction failed"
     ]
   },
   "tires": {
