make the address form requierd

--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -1800,6 +1800,14 @@
       "zipCode": [
         "الرمز البريدي",
         "zipCode"
+      ],
+      "shipping": [
+          "الشحن",
+          "Shipping"
+      ],
+      "address": [
+        "عنوان",
+        "Address"
       ]
     },
     "order": {
