--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -1997,6 +1997,10 @@
     "item": [
       "القطع",
       "Item(s)"
+    ],
+    "empty": [
+      "عربة التسوق فارغة",
+      "Your cart is empty"
     ]
   },
   "orderSummary": {
