translate when change a language

--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -2399,6 +2399,14 @@
     "totalPrice": [
       "المجموع",
       "Total Price"
+    ],
+    "archived": [
+      "الارشيف",
+      "archived"
+    ],
+    "comment": [
+      "التعليقات",
+      "Comments"
     ]
   },
   "renderFileInput": {
