change the archived name to Closed

--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -2400,9 +2400,9 @@
       "المجموع",
       "Total Price"
     ],
-    "archived": [
-      "الارشيف",
-      "archived"
+    "closed": [
+      "مغلق",
+      "Closed"
     ],
     "comment": [
       "التعليقات",
