translation the comment

--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -2399,6 +2399,10 @@
     "totalPrice": [
       "المجموع",
       "Total Price"
+    ],
+    "comment": [
+      "التعليقات",
+      "Comments"
     ]
   },
   "renderFileInput": {
