check if we dont have any addresses

--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -471,6 +471,26 @@
     "batteries": [
       "بطاريات",
       "Batteries"
+    ],
+    "cleaning": [
+      "تنظيف هيك السيارة والعناية بها",
+      "Bodywork Cleaning and Care"
+    ],
+    "children": [
+      "مقعد للأطفال",
+      "Children Seats"
+    ],
+    "mats": [
+      "سجاد السيارة",
+      "car mats"
+    ],
+    "refrigerator": [
+      "ثلاجة",
+      "Refrigerator"
+    ],
+    "wires": [
+      "الأسلاك والكيبلات",
+      "Wires & Cables"
     ]
   },
   "quotationOrder": {
@@ -1698,6 +1718,10 @@
       "mobileTitle": [
         "كراجك",
         "Your garage"
+      ],
+      "defaultAddress": [
+        "عنوان افتراضي",
+        "Default Addresses"
       ]
     },
     "accountSetting": {
@@ -3182,5 +3206,19 @@
         ]
       }
     }
+  },
+  "accessories": {
+    "popularBrands": [
+      "اكسسوارات الماركات الشعبية",
+      "Popular  Accessories Brands"
+    ],
+    "accessBestSeller": [
+      "اكسسوارات الأكثر مبيعا",
+      "Accessories Bestseller"
+    ],
+    "category": [
+      "فئات الملحقات",
+      "Accessories Categories"
+    ]
   }
 }
