fix add all with a style. Add the product name (from customers)

--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -2403,7 +2403,11 @@
     "comment": [
       "التعليقات",
       "Comments"
-    ]
+	],
+	"addAllToCart": [
+		"أضف الكل إلى العربة",
+		"Add all to cart"
+	]
   },
   "renderFileInput": {
     "uploadFile": [
