update the quotation text

--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -476,7 +476,7 @@
   "quotationOrder": {
     "title": [
       "طلب تسعيرة",
-      "Qutation Order"
+      "Quotation Order"
     ],
     "weMoveFast": [
       "نحن حريصون على توفير أفضل تجربة لعملائنا.",
