--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -223,7 +223,7 @@
       ]
     },
     "requiredField": [
-      "المعلومات المطلوبه",
+      "المعلومات مطلوبة",
       "Required input"
     ]
   },
