fix the garag's style

--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -1008,7 +1008,7 @@
     },
     "vehicle": {
       "title": [
-        "كراج السيارات",
+        "كراج",
         "Garage"
       ],
       "make": [
